--- a/ch09/css/ui.css
+++ b/ch09/css/ui.css
@@ -112,6 +112,7 @@ preserve-3d; transform:matrix3d(1,0,0,0,0,0.1,0,0,0,0,1,0,0,0,0,1); transition:a
 .detail_content{width:719px; height:453px; position:absolute; left:117px; top:38px; padding:30px 0;}
 .img_book{width:270px; float:left;}
 .img_book img{width:270px;}
+.img_book strong{width:270px; font-size:20px; color:#ed3140;}
 .book_description{width:449px; float:left; padding:20px 20px 20px 40px;}
 .detail_content:after{content:""; display:block; clear:both;}
 .book_description h4{font-size:31px; font-weight:700; color:#f92d68; line-height:31px;}
